@@ -1,3 +1,10 @@
+Summary of important user-visible changes for statistics 1.2.1:
+-------------------------------------------------------------------
+
+ ** The following functions are new:
+
+      pcares  pcacov
+
 Summary of important user-visible changes for statistics 1.2.0:
 -------------------------------------------------------------------
 
